github_data_collector/src/data/issue_comment/nccgroup_redsnarf.txt
They are all free for Open Source projects like this one.
https://github.com/marketplace/category/continuous-integration


```
$ python2.7 redsnarf.py 
  File "redsnarf.py", line 1138
    print(unquoted[i].strip()[:len(unquoted[i].strip())-40]))
                                                            ^
SyntaxError: invalid syntax

```

When I fix this, there's a different error.
Is it normal when using the standard hash format for it to use the Username and Hash as the username after trying Username and Hash? I tried connecting to a machine(s) with a known valid hashes with no luck. Wouldn't you want to pass LM:NTLM then try NTLM?


RedSnarf fails to connect and execute proper query if password contains complex password policy with special characters.

`../redsnarf.py -H ip=10.0.0.101 -u admwiz32 -p q1w2e3R$T%Y^ -d lab.local -cQ y`
![image](https://user-images.githubusercontent.com/5232577/27782363-e4d6ce02-5fda-11e7-8c03-889eb95ecdb7.png)

**Password Input Solution**
In case to specify a complex password with special characters, the password it must be added inside single quotes. This seems to work but then it fails to perform a simple query to retrieve if the user belongs to specific group or not. 

The problem occurs on the fact that the winexe breaks and cannot parse the password with the special characters.

`../redsnarf.py -H ip=10.0.0.101 -u admwiz32 -p 'q1w2e3R$T%Y^' -d lab.local -cQ y`
![image](https://user-images.githubusercontent.com/5232577/27782592-c9812a7a-5fdb-11e7-9bb9-7578b44f9782.png)

This can also be validated running the Command code that it fails directly with winexe..

`/usr/bin/pth-winexe -U 'lab.local\admwiz32%q1w2e3R$T%Y^' --uninstall --system \/\/10.0.0.101 'net group "Domain Admins" /domain' 2>/dev/null`
![image](https://user-images.githubusercontent.com/5232577/27782640-f920cbaa-5fdb-11e7-9c35-5f5733e86eae.png)

**Winexe proper input manipulation**
A solution comes to the way that winexe can parse proper our valid credentials. Instead of double (") quotes the corresponding lines must be changed with single (') quote. 
![image](https://user-images.githubusercontent.com/5232577/27782770-86da5e20-5fdc-11e7-8f58-ae01b1ef784c.png)

target 192.168.245.145 os is win7
and mypc is also win7

D:\security\Tools>net use \192.168.254.145\admin$ admin /user:WIN-8KJMMFIL6HF\a
dministrator
命令成功完成。 

success!!!

D:\security\Tools>net use \192.168.254.145\admin$ /del
\192.168.254.145\admin$ 已经删除。

=======================================================

D:\security\Tools>net use \192.168.254.145\admin$ admin /user:WIN-8KJMMFIL6HF\a
dmin
发生系统错误 5。拒绝访问。 
access deny!

failed!!!!

admin blong to administrators group,but ,administrator can ipc share ,admin cant !!!

why ?  thanks!

